new file name View to view

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost:127.0.0.1:27017/blogify
+MONGO_URL=mongodb+srv://jinnivyas_db_user:Antim@vyas90@cluster0.tgdndo3.mongodb.net/blogify?retryWrites=true&w=majority&appName=Cluster0
 PORT=8000
